<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

     "Mark Favorite", should appear as action button if possible
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_photo_camera_white_24dp"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom"/>

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item android:id="@+id/item1"
        android:title="@string/item1"
        app:showAsAction="never"/>
    <item android:id="@+id/item2"
        android:title="@string/item2"
        app:showAsAction="never"/>
    <item android:id="@+id/item3"
        android:title="@string/item3"
        app:showAsAction="never"/>
    <item android:id="@+id/item4"
        android:title="@string/item4"
        app:showAsAction="never"/>

    <!--<item-->
        <!--android:id="@+id/item1"-->
        <!--android:showAsAction="always"-->
        <!--android:title="@string/item1">-->
    <!--</item>-->
    <!--<item-->
        <!--android:id="@+id/item2"-->
        <!--android:icon="@android:drawable/ic_menu_call"-->
        <!--android:showAsAction="ifRoom"-->
        <!--android:title="@string/item2">-->
    <!--</item>-->
    <!--<item-->
        <!--android:id="@+id/item3"-->
        <!--android:icon="@android:drawable/ic_menu_info_details"-->
        <!--android:showAsAction="ifRoom|withText"-->
        <!--android:title="@string/item3">-->
    <!--</item>-->
    <!--<item-->
        <!--android:id="@+id/item4"-->
        <!--android:icon="@android:drawable/ic_menu_view"-->
        <!--android:showAsAction="never"-->
        <!--android:title="@string/item4">-->
    <!--</item>-->

</menu>